--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,11 +6,10 @@
 
 jobs:
   build:
-
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Install Prerequisites
       run: .\build\vsts-prerequisites.ps1
       shell: powershell
@@ -18,7 +17,7 @@ jobs:
       run: .\build\vsts-validate.ps1
       shell: powershell
     - name: Build
-      run: .\build\vsts-build.ps1 -ApiKey $env:APIKEY
+      run: .\build\vsts-build.ps1 -ApiKey $env:APIKEY -SkipPublish
       shell: powershell
       env:
         APIKEY: ${{ secrets.ApiKey }}
