--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,14 +8,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Install Prerequisites
-      run: .\build\vsts-prerequisites.ps1
-      shell: powershell
+    #- name: Install Prerequisites
+    #  run: .\build\vsts-prerequisites.ps1
+    #  shell: powershell
     - name: Validate
       run: .\build\vsts-validate.ps1
       shell: powershell
     - name: Build
-      run: .\build\vsts-build.ps1 -ApiKey $env:APIKEY -SkipPublish
+      run: .\build\vsts-build.ps1 -ApiKey $env:APIKEY -AutoVersion
       shell: powershell
       env:
         APIKEY: ${{ secrets.ApiKey }}
