--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -27,4 +27,4 @@ jobs:
         retain_days: 2
         keep_minimum_runs: 2
         delete_workflow_by_state_pattern: "All"
-        dry_run: false
+        dry_run: 'false'
