--- a/.github/workflows/update-wiki.yml
+++ b/.github/workflows/update-wiki.yml
@@ -7,7 +7,8 @@ on:
       - 'wiki/**'
       - 'docs/**'
     branches:
-      - development
+      - develop
+      - master
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
